# macmcp

./: .gitignore  LICENSE  README.md  activate_calendar.py  macmcp.py  pyproject.toml  register_calendar.py  setup.py  tool_manager.py
macmcp/: __init__.py  macmcp.py
macmcp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
scripts/: collect_applescript_apis.py
templates/: index.html
tests/: conftest.py  test_macmcp.py
