[project]
name = "macmcp"
version = "0.1.0"
description = ""
authors = [
    {name = "Oliver Spindler",email = "os@oliverspindler.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.115.11,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "mcp[cli]>=1.4.1,<2.0.0",
    "httpx>=0.28.1",
    "flask>=3.1.0",
    "fastmcp>=0.4.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-cov>=6.1.0",
]
